// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Unievent.Infra.Data;

#nullable disable

namespace Unievent.Infra.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20260821113028_AddEventoLocal")]
    partial class AddEventoLocal
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.5")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Unievent.Domain.Entities.Aluno", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("ChaveConfirmacaoEmail")
                        .HasMaxLength(300)
                        .HasColumnType("nvarchar(300)");

                    b.Property<DateTime>("DataNascimento")
                        .HasColumnType("datetime2");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<bool>("EmailConfirmado")
                        .HasColumnType("bit");

                    b.Property<string>("FotoPerfil")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int?>("InstituicaoId")
                        .HasColumnType("int");

                    b.Property<bool>("IsAtivo")
                        .HasColumnType("bit");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("Role")
                        .HasColumnType("int");

                    b.Property<string>("Senha")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("TipoParticipante")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("ChaveConfirmacaoEmail")
                        .IsUnique()
                        .HasFilter("[ChaveConfirmacaoEmail] IS NOT NULL");

                    b.HasIndex("Email")
                        .IsUnique();

                    b.HasIndex("InstituicaoId");

                    b.ToTable("Aluno");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Certificado", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("DataCertifcado")
                        .HasColumnType("datetime2");

                    b.Property<int>("EventoId")
                        .HasColumnType("int");

                    b.Property<string>("Texto")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("EventoId");

                    b.ToTable("Certificado");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Evento", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Capacidade")
                        .HasColumnType("int");

                    b.Property<string>("Categoria")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("DataEvento")
                        .HasColumnType("datetime2");

                    b.Property<string>("Descricao")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime?>("FimInscricoes")
                        .HasColumnType("datetime2");

                    b.Property<DateTime?>("InicioInscricoes")
                        .HasColumnType("datetime2");

                    b.Property<int?>("InstituicaoId")
                        .HasColumnType("int");

                    b.Property<double?>("Latitude")
                        .HasColumnType("float");

                    b.Property<string>("Local")
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<double?>("Longitude")
                        .HasColumnType("float");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("PublicoPermitido")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<int>("RaioCheckInMetros")
                        .HasColumnType("int");

                    b.Property<int>("ResponsavelEventoId")
                        .HasColumnType("int");

                    b.PrimitiveCollection<string>("Thumbnail")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ToleranciaCheckInMinutos")
                        .HasColumnType("int");

                    b.Property<string>("Visibilidade")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("Id");

                    b.HasIndex("ResponsavelEventoId");

                    b.HasIndex("InstituicaoId", "Categoria");

                    b.HasIndex("InstituicaoId", "DataEvento");

                    b.HasIndex("Visibilidade", "PublicoPermitido");

                    b.ToTable("Evento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Instituicao", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("AtualizadoEmUtc")
                        .HasColumnType("datetime2");

                    b.Property<string>("Bairro")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("Cep")
                        .IsRequired()
                        .HasMaxLength(8)
                        .HasColumnType("nvarchar(8)");

                    b.Property<string>("Cidade")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("Cnpj")
                        .IsRequired()
                        .HasMaxLength(18)
                        .HasColumnType("nvarchar(18)");

                    b.Property<string>("Codigo")
                        .HasMaxLength(60)
                        .HasColumnType("nvarchar(60)");

                    b.Property<DateTime>("CriadoEmUtc")
                        .HasColumnType("datetime2");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("FotoPerfil")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<bool>("IsAtivo")
                        .HasColumnType("bit");

                    b.Property<string>("Nome")
                        .HasMaxLength(160)
                        .HasColumnType("nvarchar(160)");

                    b.Property<string>("NomeAbreviado")
                        .HasMaxLength(40)
                        .HasColumnType("nvarchar(40)");

                    b.Property<string>("Numero")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<string>("Rua")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Site")
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Telefone")
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.HasKey("Id");

                    b.HasIndex("Cnpj")
                        .IsUnique();

                    b.HasIndex("Codigo")
                        .IsUnique()
                        .HasFilter("[Codigo] IS NOT NULL");

                    b.ToTable("Instituicao");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.NotificacaoEvento", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("AlunoId")
                        .HasColumnType("int");

                    b.Property<string>("Assunto")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<bool>("Enviada")
                        .HasColumnType("bit");

                    b.Property<string>("Erro")
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("EventoId")
                        .HasColumnType("int");

                    b.Property<string>("Mensagem")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("ProcessadaEmUtc")
                        .HasColumnType("datetime2");

                    b.Property<string>("Tipo")
                        .IsRequired()
                        .HasMaxLength(60)
                        .HasColumnType("nvarchar(60)");

                    b.HasKey("Id");

                    b.HasIndex("EventoId");

                    b.HasIndex("AlunoId", "EventoId", "Tipo")
                        .IsUnique();

                    b.ToTable("NotificacaoEvento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Participacao", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("AlunoId")
                        .HasColumnType("int");

                    b.Property<bool>("CertificadoEmitido")
                        .HasColumnType("bit");

                    b.Property<string>("CodigoIngresso")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("CodigoValidacao")
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime?>("DataConfirmacao")
                        .HasColumnType("datetime2");

                    b.Property<double?>("DistanciaCheckInMetros")
                        .HasColumnType("float");

                    b.Property<int>("EventoId")
                        .HasColumnType("int");

                    b.Property<int?>("OperadorCheckInId")
                        .HasColumnType("int");

                    b.Property<double?>("PrecisaoLocalizacaoMetros")
                        .HasColumnType("float");

                    b.Property<bool>("PresencaConfirmada")
                        .HasColumnType("bit");

                    b.HasKey("Id");

                    b.HasIndex("CodigoIngresso")
                        .IsUnique();

                    b.HasIndex("EventoId");

                    b.HasIndex("AlunoId", "EventoId")
                        .IsUnique();

                    b.ToTable("Participacao");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.PreferenciaNotificacao", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<bool>("AlertasCertificados")
                        .HasColumnType("bit");

                    b.Property<int>("AlunoId")
                        .HasColumnType("int");

                    b.Property<DateTime>("AtualizadoEmUtc")
                        .HasColumnType("datetime2");

                    b.Property<string>("Categorias")
                        .HasColumnType("nvarchar(max)");

                    b.Property<double?>("LatitudeAproximada")
                        .HasColumnType("float");

                    b.Property<bool>("LembretesEventos")
                        .HasColumnType("bit");

                    b.Property<double?>("LongitudeAproximada")
                        .HasColumnType("float");

                    b.Property<int>("RaioKm")
                        .HasColumnType("int");

                    b.Property<bool>("Recomendacoes")
                        .HasColumnType("bit");

                    b.Property<bool>("UsarLocalizacao")
                        .HasColumnType("bit");

                    b.HasKey("Id");

                    b.HasIndex("AlunoId")
                        .IsUnique();

                    b.ToTable("PreferenciaNotificacao");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.ResponsavelEvento", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("FotoPerfil")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int?>("InstituicaoId")
                        .HasColumnType("int");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("InstituicaoId");

                    b.ToTable("ResponsavelEvento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.UsuarioSecretaria", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Chave")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("nvarchar(300)");

                    b.Property<bool>("EmailConfirmado")
                        .HasColumnType("bit");

                    b.Property<string>("EmailUsuario")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<int?>("InstituicaoId")
                        .HasColumnType("int");

                    b.Property<bool>("IsAtivo")
                        .HasColumnType("bit");

                    b.Property<string>("NomeUsuario")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("RoleUsuario")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Senha")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("TentativasLogin")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("Chave")
                        .IsUnique();

                    b.HasIndex("EmailUsuario")
                        .IsUnique();

                    b.HasIndex("InstituicaoId");

                    b.ToTable("UsuarioSecretaria");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.UsuarioUnievent", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Chave")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("nvarchar(300)");

                    b.Property<DateTime>("CriadoEmUtc")
                        .HasColumnType("datetime2");

                    b.Property<string>("EmailUsuario")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<bool>("IsAtivo")
                        .HasColumnType("bit");

                    b.Property<string>("NomeUsuario")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("RoleUsuario")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Senha")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("TentativasLogin")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("Chave")
                        .IsUnique();

                    b.HasIndex("EmailUsuario")
                        .IsUnique();

                    b.ToTable("UsuarioUnievent");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Aluno", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Instituicao", "Instituicao")
                        .WithMany()
                        .HasForeignKey("InstituicaoId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("Instituicao");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Certificado", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Evento", "Evento")
                        .WithMany()
                        .HasForeignKey("EventoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Evento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Evento", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Instituicao", "Instituicao")
                        .WithMany()
                        .HasForeignKey("InstituicaoId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.HasOne("Unievent.Domain.Entities.ResponsavelEvento", "ResponsavelEvento")
                        .WithMany()
                        .HasForeignKey("ResponsavelEventoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Instituicao");

                    b.Navigation("ResponsavelEvento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.NotificacaoEvento", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Aluno", "Aluno")
                        .WithMany()
                        .HasForeignKey("AlunoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Unievent.Domain.Entities.Evento", "Evento")
                        .WithMany()
                        .HasForeignKey("EventoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Aluno");

                    b.Navigation("Evento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.Participacao", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Aluno", "Aluno")
                        .WithMany()
                        .HasForeignKey("AlunoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Unievent.Domain.Entities.Evento", "Evento")
                        .WithMany()
                        .HasForeignKey("EventoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Aluno");

                    b.Navigation("Evento");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.PreferenciaNotificacao", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Aluno", "Aluno")
                        .WithOne()
                        .HasForeignKey("Unievent.Domain.Entities.PreferenciaNotificacao", "AlunoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Aluno");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.ResponsavelEvento", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Instituicao", "Instituicao")
                        .WithMany()
                        .HasForeignKey("InstituicaoId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("Instituicao");
                });

            modelBuilder.Entity("Unievent.Domain.Entities.UsuarioSecretaria", b =>
                {
                    b.HasOne("Unievent.Domain.Entities.Instituicao", "Instituicao")
                        .WithMany()
                        .HasForeignKey("InstituicaoId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("Instituicao");
                });
#pragma warning restore 612, 618
        }
    }
}
